hw06/deployments/kube/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw06-service
spec:
  type: NodePort
  selector:
    app: hw06
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: web
