hw06/deployments/kube/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw06-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: "arch.homework"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hw06-service
                port:
                  number: 8080
